<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item_loans"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dimens_23dp"
                android:layout_marginTop="@dimen/dimens_19dp"
                android:layout_marginEnd="@dimen/dimens_20dp"
                android:text="@string/pay_successfully"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_79dp"
                android:src="@drawable/ic_error"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:gravity="center"
                android:text="@string/error_occurred"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dimens_30dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:layout_marginEnd="@dimen/dimens_30dp"
                android:gravity="center"
                android:text="@string/error_occurred_text"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:layout_marginTop="@dimen/dimens_30dp"
                android:layout_marginEnd="@dimen/dimens_20dp"
                android:layout_marginBottom="@dimen/dimens_27dp"
                android:paddingVertical="@dimen/dimens_10dp"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/dimens_5dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>